--- a/www/index.html
+++ b/www/index.html
@@ -19,11 +19,10 @@
 <body style="background-color: black">
 <div class="bg">
 		<br><br><br><br>
-		<br><br><br><br>
-		<br>
+		<br><br><br>
 	<div class="agile-login">
 		<div class="wrapper">
-			<h2>Login</h2>
+				<img  style="text-align: center;"class="avatar circle" src="../img/logo.gif" />
 			<div class="w3ls-form">
 				<form action="/" method="post">
 					<label>Nome</label>
