--- a/www/menu.html
+++ b/www/menu.html
@@ -3,12 +3,14 @@
 <head>
 	<!-- Meta tags -->
 	<title>Nome_APP</title>
+
 	<meta name="keywords" content="Apps Login Form Responsive widget, Flat Web Templates, Android Compatible web template, 
 	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- stylesheets -->
+	<link rel="stylesheet" type="text/css" href="mobileui/style.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/index.css">
 	<!-- google fonts  -->
@@ -16,9 +18,43 @@
 	<link href="//fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
 </head>
 <body>
-    <div class="header purple">
-        <button class="left icon ion-navicon" name="button"></button>
-        <h1>Application title</h1>
-      </div>
+		<div class="header cyan-400">
+				<div class="left">
+					<button class="icon ion-navicon-round" onclick="location.href='perfil.html';"></button>
+				</div>
+				<h1>Application title</h1>
+				<div class="right">
+					<button class="icon ion-search"></button>
+					<button class="icon ion-android-more-vertical"></button>
+				</div>
+			</div>
+			<br><br><br>
+			<div class="list">
+					<div class="item">
+						<div class="left">
+							<img style="border-style: groove;" class="imagem_lista"src="../img/perfuratriz.jpg" onclick="location.href='produto.html';">
+					</div>
+						<h3>Perfuratriz</h3>
+						<h4>Modelo: P80NIL</h4>
+						<h4>2,5m</h4>
+					</div>
+					<div class="item">
+							<div class="left">
+								<img style="border-style: groove;" class="imagem_lista"src="../img/patrola.jpg">
+						</div>
+							<h3>Patrola</h3>
+							<h4>Marca: Caterpillar</h4>
+							<h4>Cabinada</h4>
+							<h4>5m</h4>
+						</div>
+						<div class="item">
+								<div class="left">
+									<img style="border-style: groove;" class="imagem_lista"src="../img/trator.jpg">
+							</div>
+								<h3>Trator</h3>
+								<h4>Marca: Caterpillar</h4>
+								<h4>6,5m</h4>
+							</div>
+				</div>
 </body>
 </html>
