--- a/www/Pedidos.html
+++ b/www/Pedidos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!-- Meta tags -->
-	<title>Nome_APP</title>
+	<title>AgroLoc</title>
 
 	<meta name="keywords" content="Apps Login Form Responsive widget, Flat Web Templates, Android Compatible web template, 
 	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
@@ -22,7 +22,7 @@
 				<div class="left">
                         <i class="ion-chevron-left"onclick="location.href='menu.html';"></i>
 				</div>
-				<h1>Application title</h1>
+				<h1>AgroLoc</h1>
 				<div class="right">
                     <button class="icon ion-navicon-round"></button>
 				</div>
