--- a/www/menu.html
+++ b/www/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!-- Meta tags -->
-	<title>Nome_APP</title>
+	<title>AgroLoc</title>
 
 	<meta name="keywords" content="Apps Login Form Responsive widget, Flat Web Templates, Android Compatible web template, 
 	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
