--- a/www/menu.html
+++ b/www/menu.html
@@ -22,7 +22,7 @@
 				<div class="left">
 					<button class="icon ion-navicon-round" onclick="location.href='perfil.html';"></button>
 				</div>
-				<h1>Application title</h1>
+				<h1>AgroLoc</h1>
 				<div class="right">
 					<button class="icon ion-search"></button>
 					<button class="icon ion-android-more-vertical"></button>
